<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="on_back_pressed_message">Press back again to leave.</string>
    <string name="invalid_date_time_interval">Time interval invalid.</string>
    <string name="missing_date_time">Time cannot be empty.</string>
    <string name="sort_spinner_item_time">Time until meeting</string>
    <string name="invalid_date_time_past">Time specification lies is in the past.</string>
    <string name="date_time">Time</string>
    <string name="report_message">Why do you want to report the user or the offer?</string>
    <string name="publish">Publish</string>
    <string name="bad_password">Invalid password.</string>
    <string name="invalid_price">Invalid price indication.</string>
    <string name="bad_email">Invalid e-mail.</string>
    <string name="invalid_max_participants">Invalid number of participants.</string>
    <string name="bad_login">Invalid credentials.</string>
    <string name="date_format">DD.MM.YYYY</string>
    <string name="missing_title">Title must not be empty.</string>
    <string name="phone_number">Phone number</string>
    <string name="invalid_participants_interval">Invalid participant interval.</string>
    <string name="missing_participants">Participant field must not be empty.</string>
    <string name="max_participants_to_low">Already more participants than the new maximum value.</string>
    <string name="participants">Participants</string>
    <string name="participate">Participate</string>
    <string name="standard">Standard</string>
    <string name="city">City</string>
    <string name="save">Save</string>
...
    <string name="register">Register</string>
    <string name="delete_profile">Delete profile</string>
    <string name="profile_edit_success">Profile successfully processed.</string>
    <string name="profile_description">Profile description</string>
    <string name="drawer_menu_profile">Profile</string>
    <string name="invalid_price_interval">Price interval invalid.</string>
    <string name="missing_price">Price must not be empty.</string>
    <string name="price">Price</string>
    <string name="sort_spinner_item_price">Price</string>
    <string name="reset_password">Forgot password?</string>
    <string name="invalid_password">Password incorrect.</string>
    <string name="password_changed">Password changed successfully.</string>
    <string name="password">Password</string>
    <string name="invalid_location">Location not found.</string>
    <string name="missing_location">Place must not be empty.</string>
    <string name="new_password">New password</string>
    <string name="delete_profile_info">Do you really want to delete your profile? Your information will be deleted and cannot be restored. Please confirm your request with your password.</string>
    <string name="minutes">minutes</string>
    <string name="min">min</string>
    <string name="report">Report</string>
    <string name="drawer_menu_my_offers">My Offers</string>
    <string name="max">max</string>
    <string name="delete_offer">Delete</string>
    <string name="contact">Contact</string>
    <string name="contactRequest">Contact request</string>
    <string name="distance_unit">km</string>
    <string name="bright">Bright</string>
...
    <string name="unsubscribe">Unsubscribe</string>
    <string name="missing_date">Date must not be empty.</string>
    <string name="appearance">Appearance</string>
    <string name="invalid_rating_interval">Rating interval invalid.</string>
    <string name="rating">Rating</string>
    <string name="rate">Rate</string>
    <string name="missing_description">Description must not be empty.</string>
    <string name="missing_username">Username must not be empty.</string>
    <string name="username">Username</string>
    <string name="contact_info">User</string>
    <string name="notification">Notification</string>
    <string name="sort_spinner_item_amount_participants">Amount of participants</string>
    <string name="login">Login</string>
    <string name="title">Offer title</string>
    <string name="picture">offer image</string>
    <string name="offer_description">Offer description</string>
    <string name="request_sent">Request sent.</string>
    <string name="change_password">Change</string>
    <string name="passwords_matching">New password should not be the old password.</string>
    <string name="invalid_old_password">Old password incorrect.</string>
    <string name="old_password">Old password</string>
    <string name="bad_passwords">Old or new password invalid.</string>
    <string name="profile_user_age">Age:</string>
...
