...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgFragment">

        <ImageButton
            android:id="@+id/ibtBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:elevation="10dp"
...
                    app:layout_constraintEnd_toEndOf="@+id/ivOfferEditPicture"
                    app:layout_constraintStart_toStartOf="@+id/ivOfferEditPicture"
                    app:layout_constraintTop_toTopOf="@+id/ivOfferEditPicture"
                    android:contentDescription="@string/content_description_offer_image_edit_button" />

                <EditText
                    android:id="@+id/etOfferEditTitle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:autofillHints=""
                    android:background="@drawable/bg_edit_text"
                    android:elevation="5dp"
...
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHint"
                    app:layout_constraintTop_toBottomOf="@+id/ivOfferEditPicture"
                    tools:layout_editor_absoluteX="16dp" />

                <TextView
                    android:id="@+id/tvOfferEditDate"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/bg_edit_text"
                    android:clickable="true"
                    android:elevation="5dp"
...
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHint"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/etOfferEditPrice"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etOfferEditTitle" />

                <EditText
                    android:id="@+id/etOfferEditCity"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:autofillHints="postalAddress"
                    android:background="@drawable/bg_edit_text"
                    android:clickable="true"
...
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@={fragment.city}"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHint"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/etOfferEditParticipants"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvOfferEditDate" />

                <EditText
                    android:id="@+id/etOfferEditPrice"
                    android:layout_width="120dp"
...
                    android:textColorHint="@color/textHint"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etOfferEditPrice" />

                <EditText
                    android:id="@+id/etOfferEditDescription"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="16dp"
                    android:autofillHints=""
                    android:background="@drawable/bg_edit_text"
                    android:elevation="5dp"
...
                    android:textColor="@color/textHint"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etOfferEditDescription" />

                <Button
                    android:id="@+id/btOfferEditPublish"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/bg_button"
                    android:elevation="5dp"
                    android:text="@string/publish"
...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etOfferEditDescription" />

                <Button
                    android:id="@+id/btOfferEditSave"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/bg_button"
                    android:elevation="5dp"
                    android:text="@string/save"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btOfferEditDelete"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etOfferEditDescription" />

                <Button
                    android:id="@+id/btOfferEditDelete"
...
