...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="@id/srlOfferListSwipe">

            <ImageButton
                android:id="@+id/ibtOfferListCreate"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="16dp"
                android:adjustViewBounds="true"
                android:background="@drawable/bg_button"
                android:elevation="5dp"
...
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srlOfferListSwipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvOfferList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:elevation="3dp"
                android:paddingBottom="90dp" />

...
